# BurgerTime

./: .gitignore  CMakeLists.txt  README.md  compile.sh  conanfile.txt  imgui.props  notes.txt  run.sh  sdl.props  web.props
Data/audio/: 01 Start.flac  02 Game Music.flac  03 Level End.flac  04 Lose Life.flac  05 Pause, Item Appears.flac  06 Bonus.flac
Data/levels/: level_1.txt
Minigin/: AIComponent.cpp  AIComponent.h  AIFactory.cpp  AIFactory.h  AStar.h  Audio.h  AudioEventQueue.h  BFS.h  CacheExercise.cpp  CacheExercise.h  CacheExerciseFactory.cpp  Command.cpp  Command.h  Component.cpp  Component.h  ConcurrentQueue.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventHandlerComponent.cpp  EventHandlerComponent.h  EventQueue.cpp  EventQueue.h  FPSComponent.cpp  FPSComponent.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  Graph.h  GraphConnection.cpp  GraphConnection.h  GraphEnums.h  GraphNode.h  GraphicsComponent.cpp  GraphicsComponent.h  GridComponent.cpp  GridComponent.h  GridGraph.h  (+56 more)
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
server/: .gitignore  Dockerfile  Makefile  README.md  db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  template.html  test.sqlite
server/static/: index.html
src/: main.cpp
