[tool.poetry]
name = "burgertime-server"
version = "0.1.0"
description = ""
authors = ["Maxime Bloch"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = {extras = ["aiosqlite"], version = "^1.4.36"}
databases = {extras = ["aiosqlite"], version = "^0.5.5"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
